<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="error_in_communication">Error in communication.</string>
    <string name="register_progress">registering</string>
    <string name="register_btn">register_btn</string>
    <string name="design">design</string>
    <string name="login_btn">login_btn</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
